Revision history for {{$dist->name}}

{{$NEXT}}

  - Use ReadmeMarkdownFromPod and CopyReadmeFromBuild to automate
    a more useful github readme

3.200     2011-10-19T23:49:56Z

  - Move some logic out into Config::MVP::Slicer
    and consume Dist::Zilla::Role::PluginBundle::Config::Slicer
  - Update tests

3.108     2011-10-03T13:59:32Z

  [Prereqs]
  - Pod::Weaver::Plugin::Encoding
  - By default just use MakeMaker; set 'builder' to 'mb' or 'both'
    for ModuleBuild and/or DualBuilders
  - Bump @TestingMania required version to 0.14
  - Don't require OurPkgVersion

  [Fixes]
  - s/CompileTests/Test::Compile/g
  - Stop pruning dist.ini; it should be a familiar file for people
  - Fix regexp to actually prune cover_db/

3.107     2011-08-16T23:01:28Z

  [Changes]
  - Use 'placeholder_comments' config attribute to decide how
    $VERSION and $AUTHORITY should work (default to false).

  [Prereqs]
  - Require Prepender 1.112280 to skip prepending to tests
  - Require rather than recommend DZP::Run

3.106     2011-08-10T02:55:03Z

  [Changes]
  - use place holder comments for VERSION and AUTHORITY
  - Place Acknowledgements above Authors pod (and add stop word)

  [Prereqs]
  - Trade PkgVersion for OurPkgVersion
  - Require latest version of Authority
  - Use DZP Test::PodSpelling instead of DZP PodSpellingTests
  - Recommend Dist::Zilla::Plugin::Run (used by some projects)

3.105     2011-07-14T23:41:38Z

  - Update metadata

3.104     2011-07-05T23:36:30Z

  - Don't automatically require Test::More 0.96
  - Don't include Devel::Cover's cover_db/ in dist
  - Dump plugins to log if $ENV{DZIL_BUNDLE_DEBUG}
  - Fix regexp to match class by "Plugin" or "PluginBundle"

3.103     2011-06-22T03:07:14Z

  - Fix name of recommended plugin (PodSpellingTests not SpellingTests)

3.102     2011-06-22T03:01:05Z

  [Prereqs]
  - Dist::Zilla::Plugin::PodSpellingTests no longer a hard requirement

  [Fixes]